<resources>
    <string name="app_name">StackOverFlow App</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_tag_s_name">Enter tag\'s name</string>
    <string name="most_common_tags">Most common tags</string>
    <string name="python">python</string>
    <string name="java">java</string>
    <string name="csharp">c#</string>
    <string name="php">php</string>
    <string name="android">android</string>
    <string name="html">html</string>
    <string name="jquery">jquery</string>
    <string name="cpp">c++</string>
    <string name="css">css</string>
    <string name="ios">ios</string>
    <string name="mysql">mysql</string>
    <string name="sql">sql</string>
    <string name="r">r</string>
    <string name="node_js">node.js</string>
    <string name="arrays">arrays</string>
    <string name="c">c</string>
    <string name="asp_net">asp.net</string>
    <string name="reactjs">reactjs</string>
    <string name="ruby_on_rails">ruby-on-rails</string>
    <string name="javascript">javascript</string>
    <string name="net">.net</string>
    <string name="sql_server">sql-server</string>
    <string name="swift">swift</string>
    <string name="python_3_x">python-3.x</string>
    <string name="objective_c">objective-c</string>
    <string name="django">django</string>
    <string name="angular">angular</string>
    <string name="angularjs">angularjs</string>
    <string name="excel">excel</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="selected_tags">Selected tags</string>
    <string name="json">json</string>
    <string name="newest">Newest</string>
    <string name="active">Active</string>
    <string name="bountied">Bountied</string>
    <string name="unanswered">Unanswered</string>
    <string name="tags">Tags</string>

    <string name="QuestionVotes">%1$d Votes</string>
    <string name="QuestionAnswers">%1$d Answers</string>
    <string name="QuestionViews">%1$d Views</string>
    <string name="QuestionTitle">+%1$d  %2$s</string>
    <string name="no_questions_found">No Questions Found</string>
    <string name="retry">Retry</string>
    <string name="question_loading_error">Error Loading Question from server!</string>
    <string name="search_result">Search result</string>
    <string name="search_for_any_question_property">Search for any question property</string>
    <string name="only_questions_with_accepted_answers">Only questions with accepted answers</string>
    <string name="only_closed_questions">only closed questions</string>
    <string name="title_must_contain">Title must contain</string>
    <string name="body_must_contain">Body must contain</string>
    <string name="search">Search</string>
    <string name="add_tags">Add tags</string>
    <string name="search_history">Search history</string>


    <string name="content">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.
  </string>
    <string name="user_avatar">User Avatar</string>

</resources>