<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Fragment.QuestionFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_question_fragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_question_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:checkedChip="@+id/chip_newest_question_fragment"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_newest_question_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newest"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_bountied_question_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bountied"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_unanswered_question_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unanswered"/>

                <com.google.android.material.chip.Chip
                    style="@style/tagsDialogButtonChip"
                    android:id="@+id/chip_tags_question_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tags"
                    />

            </com.google.android.material.chip.ChipGroup>


        </HorizontalScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_question_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_question_fragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_questions_question_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:visibility="invisible"
        android:id="@+id/tv_no_questions_question_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_questions_found"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
